fixed overflow

--- a/clue.css
+++ b/clue.css
@@ -1,6 +1,7 @@
 body { 
     background-color: #FFE8E1;
     margin: 0;
+    overflow-x: hidden;
 }
 
 .no-bullets { 
